# Snatch

./: .gitignore  CONTRIBUTING.md  Disclaimer.md  README.md  SECURITY.md  Snatch.bat  Snatch.py  UniversalDownloader.py  interactive_mode.py  pyproject.toml  requirements.txt  setup.py  setup_ffmpeg.py  test_run.py
.github/workflows/: ci.yml  codeql.yml
Documentation/: API_REFERENCE.md  AUDIO_ENHANCEMENT_GUIDE.md  CHANGELOG.md  CONFIGURATION_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_MANAGEMENT.md  CUSTOMIZATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  Disclaimer.md  FEATURES_UPDATE.md  FIXES_README.md  FIXES_SUMMARY.md  INTEGRATION_TESTING.md  INTERACTIVE_MODE_GUIDE.md  MODULE_DOCUMENTATION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION.md  TROUBLESHOOTING_GUIDE.md  USAGE_GUIDE.md
Theme/: __init__.py  modern_interactive.py  textual_interface.py
Universal-downloader/: LICENSE  UniversalDownloader.py  requirements.txt
modules/: Supported-sites.txt  __init__.py  advanced_config.py  advanced_scheduler.py  audio_processor.py  cli.py  common_utils.py  config.py  config_helpers.py  config_manager.py  constants.py  cyberpunk_interactive.py  cyberpunk_ui.py  defaults.py  ffmpeg_helper.py  file_organizer.py  fixed_cli.py  interactive_mode.py  manager.py  metadata.py  network.py  p2p.py  performance_monitor.py  plugins.py  progress.py  session.py  standalone_audio.py  textual_interface.py  utils.py
setupfiles/: pip-package.txt  requirements.txt  setup_ffmpeg.py
snatch/: __init__.py  __main__.py  audio_processor.py  cache.py  cli.py  config.py  config_manager.py  constants.py  customization_manager.py  defaults.py  error_handler.py  ffmpeg_helper.py  file_organizer.py  help_text.py  interactive_mode.py  logging_config.py  manager.py  network.py  p2p.py  performance_monitor.py  progress.py  session.py  standalone_audio.py
snatch/theme/: __init__.py  modern_interactive.py  textual_interface.py
tests/: README.md  conftest.py  function_discovery.py  generate_test_scaffold.py  setup_test_env.py  test_advanced_integration.py  test_background_init.py  test_cache.py  test_cli.py  test_command_line.py  test_common_utils.py  test_config.py  test_constants.py  test_core_functionality.py  test_critical_paths.py  test_download.py  test_download_manager.py  test_error_handling.py  test_exceptions.py  test_features.py  test_file_operations.py  test_initialization.py  test_integration.py  test_manager.py  test_network.py  test_performance.py  test_property_based.py  test_session.py  test_setup_ffmpeg.py  test_snatch.py  test_specific_areas.py  test_url_processing.py  test_utils.py
tests/functional/: test_url_validation.py
tests/helpers/: common_helpers.py  test_helpers.py
tests/unit/: test_is_valid_url.py
