[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snatch-dl"
version = "2.0.0"
description = "A versatile, feature-rich media downloader with P2P support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rashed AL-Othman", email = "Rashed.m.alothman@gmail.com"}
]
keywords = ["download", "media", "p2p", "youtube", "video", "audio", "yt-dlp"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: Downloaders",
]

dependencies = [
    # Core download engine
    "yt-dlp>=2024.1.0",
    "mutagen>=1.47.0",
    "psutil>=5.9.0",

    # HTTP and networking
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "aiofiles>=23.2.1",

    # CLI interface
    "typer>=0.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "colorama>=0.4.6",
    "pyfiglet>=1.0.0",
    "prompt-toolkit>=3.0.43",
    "tqdm>=4.66.1",

    # Utilities
    "python-json-logger>=2.0.4",
    "typing-extensions>=4.8.0",
    "pyyaml>=6.0",
    "filelock>=3.13.1",
    "xxhash>=3.4.1",
    "backoff>=2.2.1",
    "tenacity>=8.2.3",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
audio = [
    "librosa",
    "soundfile>=0.12.0",
    "noisereduce>=3.0.0",
    "pyloudnorm>=0.1.1",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]
p2p = [
    "cryptography>=41.0.0",
    "twisted>=23.10.0",
    "netifaces>=0.11.0",
    "miniupnpc>=2.3.2",
    "pyp2p>=0.8.3",
    "storjkademlia>=0.7.4",
]
video = [
    "moviepy>=1.0.3",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
all = ["snatch-dl[audio,p2p,video]"]

[project.scripts]
snatch = "snatch.cli:main"

[project.urls]
Homepage = "https://github.com/Rashed-alothman/Snatch"
Documentation = "https://github.com/Rashed-alothman/Snatch/wiki"
Repository = "https://github.com/Rashed-alothman/Snatch"
"Issue Tracker" = "https://github.com/Rashed-alothman/Snatch/issues"

[tool.setuptools.packages.find]
include = ["snatch*"]

[tool.setuptools.package-data]
snatch = ["data/*.txt"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
